--- a/index.html
+++ b/index.html
@@ -10,54 +10,65 @@
 </head>
 
 <body>
+  <header>
+    <nav>
+      Features
+      Team
+      Sign In
+    </nav>
+  </header>
 
-  Features
-  Team
-  Sign In
+  <main>
+    All your files in one secure location, accessible anywhere.
 
-  All your files in one secure location, accessible anywhere.
+    Fylo stores your most important files in one secure location.
+    Access them wherever you need, share and collaborate with friends,
+    family, and co-workers.
 
-  Fylo stores your most important files in one secure location.
-  Access them wherever you need, share and collaborate with friends,
-  family, and co-workers.
+    Get Started
+  </main>
 
-  Get Started
+  <section>
+    Stay productive, wherever you are
 
-  Stay productive, wherever you are
+    Never let location be an issue when accessing your files. Fylo has you
+    covered for all of your file storage needs.
 
-  Never let location be an issue when accessing your files. Fylo has you
-  covered for all of your file storage needs.
+    Securely share files and folders with friends, family and colleagues for
+    live collaboration. No email attachments required!
 
-  Securely share files and folders with friends, family and colleagues for
-  live collaboration. No email attachments required!
+    See how Fylo works
+    <article>
+      Fylo has improved our team productivity by an order of magnitude. Since
+      making the switch our team has become a well-oiled collaboration machine.
 
-  See how Fylo works
+      Kyle Burton
+      Founder & CEO, Huddle
+    </article>
+  </section>
 
-  Fylo has improved our team productivity by an order of magnitude. Since
-  making the switch our team has become a well-oiled collaboration machine.
+  <section>
+    Get early access today
 
-  Kyle Burton
-  Founder & CEO, Huddle
+    It only takes a minute to sign up and our free starter tier is extremely generous.
+    If you have any questions, our support team would be happy to help you.
 
-  Get early access today
+    Get Started For Free
+  </section>
 
-  It only takes a minute to sign up and our free starter tier is extremely generous.
-  If you have any questions, our support team would be happy to help you.
+  <footer>
+    Phone: +1-543-123-4567
+    example@fylo.com
 
-  Get Started For Free
+    About Us
+    Jobs
+    Press
+    Blog
 
-  Phone: +1-543-123-4567
-  example@fylo.com
-
-  About Us
-  Jobs
-  Press
-  Blog
-
-  Contact Us
-  Terms
-  Privacy
-
+    Contact Us
+    Terms
+    Privacy
+  </footer>
 </body>
 
 </html>
