Add hero img, heading, content, and btn.

--- a/index.html
+++ b/index.html
@@ -15,20 +15,26 @@
 <body>
   <header>
     <nav>
-      Features
-      Team
-      Sign In
+      <img class="logo" src="images/logo.svg" alt="">
+      <ul>
+        <li>Features</li>
+        <li>Team</li>
+        <li>Sign In</li>
+      </ul>
     </nav>
   </header>
 
   <main>
-    All your files in one secure location, accessible anywhere.
+    <img src="images/illustration-1.svg" alt="Cartoon image of a woman and man pulling, and inserting, documents from a folder.">
+    <h1 class="main__heading">All your files in one secure location, accessible anywhere.</h1>
 
-    Fylo stores your most important files in one secure location.
-    Access them wherever you need, share and collaborate with friends,
-    family, and co-workers.
+    <p class="main__body">
+      Fylo stores your most important files in one secure location.
+      Access them wherever you need, share and collaborate with friends,
+      family, and co-workers.
+    </p>
 
-    Get Started
+    <button class="main__cta">Get Started</button>
   </main>
 
   <section>
