--- a/index.html
+++ b/index.html
@@ -37,16 +37,26 @@
     <button class="main__cta">Get Started</button>
   </main>
 
-  <section>
-    Stay productive, wherever you are
+  <img class="seperator" src="images/bg-curve-mobile.svg" alt="">
 
-    Never let location be an issue when accessing your files. Fylo has you
-    covered for all of your file storage needs.
+  <section class="productive">
 
-    Securely share files and folders with friends, family and colleagues for
-    live collaboration. No email attachments required!
+    <img src="images/illustration-2.svg" alt="">
+    <h2>Stay productive, wherever you are</h2>
 
-    See how Fylo works
+    <p>
+      Never let location be an issue when accessing your files. Fylo has you
+      covered for all of your file storage needs.
+    </p>
+    <p>
+      Securely share files and folders with friends, family and colleagues for
+      live collaboration. No email attachments required!
+    </p>
+
+    <div class="productive__cta">
+      See how Fylo works
+    </div>
+
     <article>
       Fylo has improved our team productivity by an order of magnitude. Since
       making the switch our team has become a well-oiled collaboration machine.
@@ -56,27 +66,36 @@
     </article>
   </section>
 
-  <section>
-    Get early access today
+  <section class="earlyaccess">
+    <h2>Get early access today</h2>
 
-    It only takes a minute to sign up and our free starter tier is extremely generous.
-    If you have any questions, our support team would be happy to help you.
+    <p>
+      It only takes a minute to sign up and our free starter tier is extremely generous.
+      If you have any questions, our support team would be happy to help you.
+    </p>
 
-    Get Started For Free
+    <button>Get Started For Free</button>
   </section>
 
   <footer>
-    Phone: +1-543-123-4567
-    example@fylo.com
+    <img src="images/logo.svg" alt="">
+    <ul>
+      <li>Phone: +1-543-123-4567</li>
+      <li>example@fylo.com</li>
+    </ul>
 
-    About Us
-    Jobs
-    Press
-    Blog
+    <ul>
+      <li>About Us</li>
+      <li>Jobs</li>
+      <li>Press</li>
+      <li>Blog</li>
+    </ul>
 
-    Contact Us
-    Terms
-    Privacy
+    <ul>
+      <li>Contact Us</li>
+      <li>Terms</li>
+      <li>Privacy</li>
+    </ul>
   </footer>
 </body>
 
