--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
 
     <img src="images/illustration-2.svg" alt="">
     <h2>Stay productive, wherever you are</h2>
-
     <p>
       Never let location be an issue when accessing your files. Fylo has you
       covered for all of your file storage needs.
@@ -52,17 +51,29 @@
       Securely share files and folders with friends, family and colleagues for
       live collaboration. No email attachments required!
     </p>
-
     <div class="productive__cta">
       See how Fylo works
     </div>
 
     <article>
-      Fylo has improved our team productivity by an order of magnitude. Since
-      making the switch our team has become a well-oiled collaboration machine.
+      <div class="productive__card">
+        <img src="images/icon-quotes.svg" alt="Start quotation.">
+        <p class="productive__card-body">
+          Fylo has improved our team productivity by an order of magnitude. Since
+          making the switch our team has become a well-oiled collaboration machine.
+        </p>
+        <div class="productive__card-container">
+          <img src="images/avatar-testimonial.jpg" alt="Display picture of Kyle Burton" class="productive__card-img">
 
-      Kyle Burton
-      Founder & CEO, Huddle
+          <div class="productive__card-wrapper">
+            <h3 class="productive__card-header">Kyle Burton
+            </h3>
+            <p class="productive__card-title">
+              Founder & CEO, Huddle
+            </p>
+          </div>
+        </div>
+      </div>
     </article>
   </section>
 
