Add social icons, lists to footer.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -89,7 +90,7 @@
   </section>
 
   <footer>
-    <img src="images/logo.svg" alt="">
+    <img class="footer__logo" src="images/logo-footer.svg" alt="">
     <ul>
       <li>Phone: +1-543-123-4567</li>
       <li>example@fylo.com</li>
@@ -107,6 +108,12 @@
       <li>Terms</li>
       <li>Privacy</li>
     </ul>
+
+    <div class="social__icons-wrapper">
+      <i class="fa fa-facebook" aria-hidden="true"></i>
+      <i class="fa fa-twitter" aria-hidden="true"></i>
+      <i class="fa fa-instagram" aria-hidden="true"></i>
+    </div>
   </footer>
 </body>
 
