--- a/index.html
+++ b/index.html
@@ -28,12 +28,15 @@
   <main>
     <img src="images/illustration-1.svg" alt="Cartoon image of a woman and man pulling, and inserting, documents from a folder.">
     <h1 class="main__heading">All your files in one secure location, accessible anywhere.</h1>
-
     <p class="main__body">
       Fylo stores your most important files in one secure location.
       Access them wherever you need, share and collaborate with friends,
       family, and co-workers.
     </p>
+
+    <form class="main__email" action="/index.html">
+      <input type="text" id="email" name="email" placeholder="Enter your email..">
+    </form>
 
     <button class="main__cta">Get Started</button>
   </main>
@@ -41,7 +44,6 @@
   <img class="seperator" src="images/bg-curve-mobile.svg" alt="">
 
   <section class="productive">
-
     <img src="images/illustration-2.svg" alt="">
     <h2>Stay productive, wherever you are</h2>
     <p>
@@ -65,7 +67,6 @@
         </p>
         <div class="productive__card-container">
           <img src="images/avatar-testimonial.jpg" alt="Display picture of Kyle Burton" class="productive__card-img">
-
           <div class="productive__card-wrapper">
             <h3 class="productive__card-header">Kyle Burton
             </h3>
@@ -80,39 +81,50 @@
 
   <section class="earlyaccess">
     <h2>Get early access today</h2>
-
     <p>
       It only takes a minute to sign up and our free starter tier is extremely generous.
       If you have any questions, our support team would be happy to help you.
     </p>
-
     <button>Get Started For Free</button>
   </section>
 
   <footer>
-    <img class="footer__logo" src="images/logo-footer.svg" alt="">
+    <img class="footer__logo" src="images/logo-footer.svg" alt="Fylo logo.">
+
+    <div class="footer__contact-wrapper">
+      <div class="footer__contact-container">
+        <img src="images/icon-phone.svg" alt="Phone icon.">
+        <a href="#">Phone: +1-543-123-4567</a>
+      </div>
+      <div class="footer__contact-container">
+        <img src="images/icon-email.svg" alt="Email icon.">
+        <a href="mailto:example@fylo.com">example@fylo.com</a>
+      </div>
+    </div>
+
     <ul>
-      <li>Phone: +1-543-123-4567</li>
-      <li>example@fylo.com</li>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">Blog</a></li>
     </ul>
 
     <ul>
-      <li>About Us</li>
-      <li>Jobs</li>
-      <li>Press</li>
-      <li>Blog</li>
-    </ul>
-
-    <ul>
-      <li>Contact Us</li>
-      <li>Terms</li>
-      <li>Privacy</li>
+      <li><a href="#">Contact Us</a></li>
+      <li><a href="#">Terms</a></li>
+      <li><a href="#">Privacy</a></li>
     </ul>
 
     <div class="social__icons-wrapper">
-      <i class="fa fa-facebook" aria-hidden="true"></i>
-      <i class="fa fa-twitter" aria-hidden="true"></i>
-      <i class="fa fa-instagram" aria-hidden="true"></i>
+      <span class="fa-stack fa-lg">
+        <a href="#"><i class="fa fa fa-facebook fa-stack-1x"></i></a>
+      </span>
+      <span class="fa-stack fa-lg">
+        <a href="#"><i class="fa fa fa-twitter fa-stack-1x"></i></a>
+      </span>
+      <span class="fa-stack fa-lg">
+        <a href="#"><i class="fa fa fa-instagram fa-stack-1x"></i></a>
+      </span>
     </div>
   </footer>
 </body>
