Add section CTA, complete mobile view.

--- a/index.html
+++ b/index.html
@@ -54,10 +54,12 @@
       Securely share files and folders with friends, family and colleagues for
       live collaboration. No email attachments required!
     </p>
-    <div class="productive__cta">
-      See how Fylo works
+    <div class="productive__cta-wrapper">
+      <div class="productive__cta">
+        See how Fylo works
+      </div>
+      <img src="images/icon-arrow.svg" alt="Arrow icon.">
     </div>
-
     <article>
       <div class="productive__card">
         <img src="images/icon-quotes.svg" alt="Start quotation.">
