Add media queries for min-width to main.

--- a/index.html
+++ b/index.html
@@ -26,19 +26,23 @@
   </header>
 
   <main>
-    <img src="images/illustration-1.svg" alt="Cartoon image of a woman and man pulling, and inserting, documents from a folder.">
-    <h1 class="main__heading">All your files in one secure location, accessible anywhere.</h1>
-    <p class="main__body">
-      Fylo stores your most important files in one secure location.
-      Access them wherever you need, share and collaborate with friends,
-      family, and co-workers.
-    </p>
-
-    <form class="main__email" action="/index.html">
-      <input type="text" id="email" name="email" placeholder="Enter your email..">
-    </form>
-
-    <button class="main__cta">Get Started</button>
+    <div class="grid-col-2">
+      <picture class="grid-column">
+        <img src="images/illustration-1.svg" alt="Cartoon image of a woman and man pulling, and inserting, documents from a folder.">
+      </picture>
+      <div class="grid-column">
+        <h1 class="main__heading">All your files in one secure location, accessible anywhere.</h1>
+        <p class="main__body">
+          Fylo stores your most important files in one secure location.
+          Access them wherever you need, share and collaborate with friends,
+          family, and co-workers.
+        </p>
+        <form class="main__email" action="/index.html">
+          <input type="text" id="email" name="email" placeholder="Enter your email..">
+        </form>
+        <button class="main__cta">Get Started</button>
+      </div>
+    </div>
   </main>
 
   <img class="seperator" src="images/bg-curve-mobile.svg" alt="">
