Add media queries for min-width to header and main.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <main>
     <div class="grid-col-2">
-      <picture class="grid-column">
+      <picture class="grid-column grid-column-1">
         <img src="images/illustration-1.svg" alt="Cartoon image of a woman and man pulling, and inserting, documents from a folder.">
       </picture>
       <div class="grid-column">
@@ -37,10 +37,14 @@
           Access them wherever you need, share and collaborate with friends,
           family, and co-workers.
         </p>
-        <form class="main__email" action="/index.html">
-          <input type="text" id="email" name="email" placeholder="Enter your email..">
-        </form>
-        <button class="main__cta">Get Started</button>
+
+        <div class="grid-col-2-btns">
+          <form class="main__email" action="/index.html">
+            <input type="text" id="email" name="email" placeholder="Enter your email..">
+          </form>
+          <button class="main__cta">Get Started</button>
+        </div>
+
       </div>
     </div>
   </main>
