Add media queries min-width to footer.

--- a/index.html
+++ b/index.html
@@ -99,43 +99,53 @@
   </section>
 
   <footer>
-    <img class="footer__logo" src="images/logo-footer.svg" alt="Fylo logo.">
+    <div class="logo__gutter">
+      <img class="footer__logo" src="images/logo-footer.svg" alt="Fylo logo.">
+    </div>
+    <div class="grid-col-4">
+      <div class="footer-grid-col">
 
-    <div class="footer__contact-wrapper">
-      <div class="footer__contact-container">
-        <img src="images/icon-phone.svg" alt="Phone icon.">
-        <a href="#">Phone: +1-543-123-4567</a>
+        <div class="footer__contact-wrapper">
+          <div class="footer__contact-container">
+            <img src="images/icon-phone.svg" alt="Phone icon.">
+            <a href="#">Phone: +1-543-123-4567</a>
+          </div>
+          <div class="footer__contact-container">
+            <img src="images/icon-email.svg" alt="Email icon.">
+            <a href="mailto:example@fylo.com">example@fylo.com</a>
+          </div>
+        </div>
       </div>
-      <div class="footer__contact-container">
-        <img src="images/icon-email.svg" alt="Email icon.">
-        <a href="mailto:example@fylo.com">example@fylo.com</a>
+      <div class="footer-grid-col">
+        <ul>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">Blog</a></li>
+        </ul>
+      </div>
+      <div class="footer-grid-col">
+        <ul>
+          <li><a href="#">Contact Us</a></li>
+          <li><a href="#">Terms</a></li>
+          <li><a href="#">Privacy</a></li>
+        </ul>
+      </div>
+      <div class="footer-grid-col">
+        <div class="social__icons-wrapper">
+          <span class="fa-stack fa-lg">
+            <a href="#"><i class="fa fa fa-facebook fa-stack-1x"></i></a>
+          </span>
+          <span class="fa-stack fa-lg">
+            <a href="#"><i class="fa fa fa-twitter fa-stack-1x"></i></a>
+          </span>
+          <span class="fa-stack fa-lg">
+            <a href="#"><i class="fa fa fa-instagram fa-stack-1x"></i></a>
+          </span>
+        </div>
       </div>
     </div>
 
-    <ul>
-      <li><a href="#">About Us</a></li>
-      <li><a href="#">Jobs</a></li>
-      <li><a href="#">Press</a></li>
-      <li><a href="#">Blog</a></li>
-    </ul>
-
-    <ul>
-      <li><a href="#">Contact Us</a></li>
-      <li><a href="#">Terms</a></li>
-      <li><a href="#">Privacy</a></li>
-    </ul>
-
-    <div class="social__icons-wrapper">
-      <span class="fa-stack fa-lg">
-        <a href="#"><i class="fa fa fa-facebook fa-stack-1x"></i></a>
-      </span>
-      <span class="fa-stack fa-lg">
-        <a href="#"><i class="fa fa fa-twitter fa-stack-1x"></i></a>
-      </span>
-      <span class="fa-stack fa-lg">
-        <a href="#"><i class="fa fa fa-instagram fa-stack-1x"></i></a>
-      </span>
-    </div>
   </footer>
 </body>
 
