--- a/index.html
+++ b/index.html
@@ -90,12 +90,24 @@
   </section>
 
   <section class="earlyaccess">
-    <h2>Get early access today</h2>
-    <p>
-      It only takes a minute to sign up and our free starter tier is extremely generous.
-      If you have any questions, our support team would be happy to help you.
-    </p>
-    <button>Get Started For Free</button>
+    <div class="earlyaccess__gutters">
+
+      <div class="grid-col-2-section">
+
+        <div class="grid-column-sec">
+          <h2>Get early access today</h2>
+          <p>
+            It only takes a minute to sign up and our free starter tier is extremely generous.
+            If you have any questions, our support team would be happy to help you.
+          </p>
+        </div>
+
+        <div class="grid-column-sec">
+          <button>Get Started For Free</button>
+        </div>
+
+      </div>
+    </div>
   </section>
 
   <footer>
