--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 <body>
   <header>
     <nav>
-      <img class="logo" src="images/logo.svg" alt="">
+      <a href="#"><img class="logo" src="images/logo.svg" alt=""></a>
       <ul>
-        <li>Features</li>
-        <li>Team</li>
-        <li>Sign In</li>
+        <li><a href="#">Features</a></li>
+        <li><a href="#">Team</a></li>
+        <li><a href="#">Sign In</a></li>
       </ul>
     </nav>
   </header>
@@ -37,14 +37,12 @@
           Access them wherever you need, share and collaborate with friends,
           family, and co-workers.
         </p>
-
         <div class="grid-col-2-btns">
           <form class="main__email" action="/index.html">
             <input type="text" id="email" name="email" placeholder="Enter your email..">
           </form>
           <button class="main__cta">Get Started</button>
         </div>
-
       </div>
     </div>
   </main>
@@ -52,48 +50,52 @@
   <img class="seperator" src="images/bg-curve-mobile.svg" alt="">
 
   <section class="productive">
-    <img src="images/illustration-2.svg" alt="">
-    <h2>Stay productive, wherever you are</h2>
-    <p>
-      Never let location be an issue when accessing your files. Fylo has you
-      covered for all of your file storage needs.
-    </p>
-    <p>
-      Securely share files and folders with friends, family and colleagues for
-      live collaboration. No email attachments required!
-    </p>
-    <div class="productive__cta-wrapper">
-      <div class="productive__cta">
-        See how Fylo works
+    <div class="col-2-prod">
+      <div class="prod-col">
+        <img src="images/illustration-2.svg" alt="">
       </div>
-      <img src="images/icon-arrow.svg" alt="Arrow icon.">
-    </div>
-    <article>
-      <div class="productive__card">
-        <img src="images/icon-quotes.svg" alt="Start quotation.">
-        <p class="productive__card-body">
-          Fylo has improved our team productivity by an order of magnitude. Since
-          making the switch our team has become a well-oiled collaboration machine.
+      <div class="prod-col prod-col-2">
+        <h2>Stay productive, wherever you are</h2>
+        <p>
+          Never let location be an issue when accessing your files. Fylo has you
+          covered for all of your file storage needs.
         </p>
-        <div class="productive__card-container">
-          <img src="images/avatar-testimonial.jpg" alt="Display picture of Kyle Burton" class="productive__card-img">
-          <div class="productive__card-wrapper">
-            <h3 class="productive__card-header">Kyle Burton
-            </h3>
-            <p class="productive__card-title">
-              Founder & CEO, Huddle
-            </p>
+        <p>
+          Securely share files and folders with friends, family and colleagues for
+          live collaboration. No email attachments required!
+        </p>
+        <div class="productive__cta-wrapper">
+          <div class="productive__cta">
+            See how Fylo works
           </div>
+          <img src="images/icon-arrow.svg" alt="Arrow icon.">
         </div>
+        <article>
+          <div class="productive__card">
+            <img src="images/icon-quotes.svg" alt="Start quotation.">
+            <p class="productive__card-body">
+              Fylo has improved our team productivity by an order of magnitude. Since
+              making the switch our team has become a well-oiled collaboration machine.
+            </p>
+            <div class="productive__card-container">
+              <img src="images/avatar-testimonial.jpg" alt="Display picture of Kyle Burton" class="productive__card-img">
+              <div class="productive__card-wrapper">
+                <h3 class="productive__card-header">Kyle Burton
+                </h3>
+                <p class="productive__card-title">
+                  Founder & CEO, Huddle
+                </p>
+              </div>
+            </div>
+          </div>
+        </article>
       </div>
-    </article>
+    </div>
   </section>
 
   <section class="earlyaccess">
     <div class="earlyaccess__gutters">
-
       <div class="grid-col-2-section">
-
         <div class="grid-column-sec">
           <h2>Get early access today</h2>
           <p>
@@ -101,11 +103,9 @@
             If you have any questions, our support team would be happy to help you.
           </p>
         </div>
-
         <div class="grid-column-sec">
           <button>Get Started For Free</button>
         </div>
-
       </div>
     </div>
   </section>
@@ -116,7 +116,6 @@
     </div>
     <div class="grid-col-4">
       <div class="footer-grid-col">
-
         <div class="footer__contact-wrapper">
           <div class="footer__contact-container">
             <img src="images/icon-phone.svg" alt="Phone icon.">
@@ -157,7 +156,6 @@
         </div>
       </div>
     </div>
-
   </footer>
 </body>
 
